--- a/rps/src/App.css
+++ b/rps/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+body{
+  font-family:sans-serif;
+  color: white;
+  background: radial-gradient(134.34% 134.34% at 50% 0%, #1f3757 0%, #131537 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 100vw;
+  height: 100vh;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header{
+  display: flex;
+  width: 45vw;
+  height: 15vh;
+  border: 1px solid white;
+  border-radius: 7px;
+  margin: auto;
+  margin-top: 50px;
+  justify-content: space-between;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.rps{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 3%;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.score{
+  margin-right: 3%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
