--- a/rps/src/App.css
+++ b/rps/src/App.css
@@ -1,13 +1,11 @@
 body{
   font-family:sans-serif;
-  color: white;
   background: radial-gradient(134.34% 134.34% at 50% 0%, #1f3757 0%, #131537 100%);
 }
 
 .container{
   width: 100vw;
   height: 100vh;
-  
 }
 
 .header{
@@ -15,20 +13,35 @@ body{
   width: 45vw;
   height: 15vh;
   border: 1px solid white;
-  border-radius: 7px;
+  border-radius: 1rem;
+  padding: 20px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 30px;
   justify-content: space-between;
-
+  max-width: 700px;
 }
 
 .rps{
   display: flex;
+  color: white;
+  font-size: 1.7rem;
+  text-decoration: solid;
+  font-weight: bold;
   flex-direction: column;
-  margin: 3%;
 }
 
 .score{
-  margin-right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: white;
+  border-radius: 7px;
+  padding: 12px 40px;
+  height: 14vh;
+  margin: -10px;
+}
 
+h2{
+  margin: auto;
+  font-size: 3rem;
 }
